added dataset from keras

--- a/main.ipynb
+++ b/main.ipynb
@@ -18,7 +18,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#getting the data from witin the keras library.\n",
+    "(training_images, training_labels), (testing_images, testing_labels) = datasets.cifar10.load_data()\n",
+    "#NOTE: we use tuples to store data like given above (think like it's an array-ish concept but you can store different data types.)\n",
+    "#also it can we descriped as a single \"variable\" used to store multiple values."
+   ]
   }
  ],
  "metadata": {
