prepared the data

--- a/main.ipynb
+++ b/main.ipynb
@@ -76,7 +76,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#reducing the amount of images we're going to feed the neural network, for saving time and recources (note: for max accuracy you can use the whole dataset)\n",
+    "training_images = training_images[:20000]\n",
+    "training_labels = training_labels[:20000]\n",
+    "testing_images = testing_images[:4000]\n",
+    "testing_labels = testing_labels[:4000]"
+   ]
   }
  ],
  "metadata": {
