--- a/main.ipynb
+++ b/main.ipynb
@@ -184,6 +184,27 @@
     "\n",
     "model.save('image_classifier.model')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#loading the trained model\n",
+    "model = models.load_model('image_classifier.model')\n",
+    "\n",
+    "#now in the tutorial we got 4 images with 32x32 pixels, but i do not posses the editing software so the rest is not complete\n",
+    "img = cv.imread('jpg name') #NOTE: with open cv you load the image in bgr (not rgb) look out for that\n",
+    "img = cv.cvtColor(img, cv.COLOR_BGR2RGB) #converting thr colour scheme from bgr to rgb\n",
+    "\n",
+    "plt.imshow(img,cmap = plt.cm.binary) #showing the image\n",
+    "\n",
+    "predicition = model.predict(np.array([img]) / 255)\n",
+    "index = np.argmax(predicition) #argmax will return the index of the max value \n",
+    "print(f\"Prediciton is {class_names[index]}\")\n",
+    " "
+   ]
   }
  ],
  "metadata": {
